service location updated

--- a/index.html
+++ b/index.html
@@ -77,8 +77,31 @@
             </div>
         </div>
     </section>
-    
 
+    <br/><br/><br/>
+
+    <h4 class="boroughnyc-title">Service Locations</h4>
+    <div class="line"></div>
+
+    <br/>
+    <p class="boroughnyc-p"> We are a construction company based in Manhattan, New YorkCurrently we provide our services across various locations in the 5 boroughs. Contact us regarding your location and we will let you know if we are able to provide our services to you. </p>
+
+    <br/><br/><br/><br/>
+
+
+
+<div class="boroughnyc">
+    <img src="./images/nyc5boroughs.png" alt="Nature" class="serviceareapic" width="600" height="400">
+</div>
+
+
+
+
+
+
+<br/>
+<br/>
+<br/>
 
 
 
