transition page load

--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
 
 
 
-    <header>
+    <header >
+        <main class="page-main">
         <div class="header-content">
+            <div class="text-wrapper">
             <h2>Alex's Construction Service </h2>
             <div class="line"></div>
-            <h1>No job too big. No job too small.</h1>
-        
+            </div>
+            <div class="text-wrapper p-wrapper">
+            <h1 ">No job too big. No job too small.</h1>
+            </div>    
         <a href="#" class="ctn">More Info</a>
 
     </div>
+    </main>
     </header>
 
     <section class="ourwork-preview">
@@ -83,15 +88,16 @@
     <h4 class="boroughnyc-title">Service Locations</h4>
     <div class="line"></div>
 
-    <br/>
+    
+    <br/><br/>
     <p class="boroughnyc-p"> We are a construction company based in Manhattan, New YorkCurrently we provide our services across various locations in the 5 boroughs. Contact us regarding your location and we will let you know if we are able to provide our services to you. </p>
 
-    <br/><br/><br/><br/>
+    <br/><br/><br/>
 
 
 
 <div class="boroughnyc">
-    <img src="./images/nyc5boroughs.png" alt="Nature" class="serviceareapic" width="600" height="400">
+    <img src="./images/nyc5boroughs copy.png" alt="Nature" class="serviceareapic" width="600" height="400">
 </div>
 
 
