page load taken out and home layout changed

--- a/index.html
+++ b/index.html
@@ -28,19 +28,13 @@
 
 
     <header >
-        <main class="page-main">
         <div class="header-content">
-            <div class="text-wrapper">
             <h2>Alex's Construction Service </h2>
             <div class="line"></div>
-            </div>
-            <div class="text-wrapper p-wrapper">
-            <h1 ">No job too big. No job too small.</h1>
-            </div>    
+            <h1 ">No job too big. <br/>No job too small.</h1>
         <a href="#" class="ctn">More Info</a>
 
     </div>
-    </main>
     </header>
 
     <section class="ourwork-preview">
@@ -65,7 +59,7 @@
         </div>
     </section>
 
-    <section class="ourwork-preview">
+    <section class="ourwork-preview2">
         
         <div class="row">
             <div class="col">
