contact page section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>Alex Construction</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
+
 </head>
 <body>
     <div class="oplayer"> </div>
@@ -28,13 +33,17 @@
 
 
     <header >
+        s
         <div class="header-content">
-            <h2>Alex's Construction Service </h2>
-            <div class="line"></div>
+            
             <h1 ">No job too big. <br/>No job too small.</h1>
+            <div class="line"></div>
+
+            <h2>Alex's Construction Service </h2>
+
         <a href="#" class="ctn">More Info</a>
 
-    </div>
+        </div>
     </header>
 
     <section class="ourwork-preview">
@@ -85,14 +94,14 @@
 
     
     <br/><br/>
-    <p class="boroughnyc-p"> We are a construction company based in Manhattan, New YorkCurrently we provide our services across various locations in the 5 boroughs. Contact us regarding your location and we will let you know if we are able to provide our services to you. </p>
+    <p class="boroughnyc-p"> We are a construction company based in Manhattan, New York Currently we provide our services across various locations in the 5 boroughs. Contact us regarding your location and we will let you know if we are able to provide our services to you. </p>
 
     <br/><br/><br/>
 
 
 
 <div class="boroughnyc">
-    <img src="./images/nyc5boroughs copy.png" alt="Nature" class="serviceareapic" width="600" height="400">
+    <img src="./images/5boro.png" alt="Nature" class="serviceareapic" width="600" height="400">
 </div>
 
 
@@ -100,9 +109,114 @@
 
 
 
-<br/>
-<br/>
-<br/>
+
+
+
+
+
+
+
+
+
+
+
+<div class="container">
+    <img src="shape.png" class="square" alt="" />
+    <div class="form">
+      <div class="contact-info">
+        <h3 class="title">Let's get in touch</h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+          dolorum adipisci recusandae praesentium dicta!
+        </p>
+
+        <div class="info">
+          <div class="information">
+            <img src="./images/location.png" class="icon" alt="" />
+            <p>92 Cherry Drive Uniondale, NY 11553</p>
+          </div>
+          <div class="information">
+            <img src="./images/email.png" class="icon" alt="" />
+            <p>lorem@ipsum.com</p>
+          </div>
+          <div class="information">
+            <img src="./images/phone.png" class="icon" alt="" />
+            <p>123-456-789</p>
+          </div>
+        </div>
+
+        <div class="social-media">
+          <p>Connect with us :</p>
+          <div class="social-icons">
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="contact-form">
+        <span class="circle one"></span>
+        <span class="circle two"></span>
+
+        <form action="https://formspree.io/f/xeqvlrqo" method="POST">
+          <h3 class="title">Contact us</h3>
+          <div class="input-container">
+            <input type="text" name="name" class="input" />
+            <label for="">Username</label>
+            <span>Username</span>
+          </div>
+          <div class="input-container">
+            <input type="email" name="email" class="input" />
+            <label for="">Email</label>
+            <span>Email</span>
+          </div>
+          <div class="input-container">
+            <input type="tel" name="phone" class="input" />
+            <label for="">Phone</label>
+            <span>Phone</span>
+          </div>
+          <div class="input-container textarea">
+            <textarea name="message" class="input"></textarea>
+            <label for="">Message</label>
+            <span>Message</span>
+          </div>
+          <input type="submit" value="Send" class="btn" />
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
