contact page + footer + fixed nav bar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
 
 </head>
 <body>
-    <div class="oplayer"> </div>
+  <div class="oplayer"> </div>
+
+  <div class="fixed-header">
+
+    <div class="oplayer-nav"> </div>
 
     <!-- Nav Bar-->
     <nav class="navbar">
@@ -21,14 +27,15 @@
         <h1 class="logo">Alex Construction</h1>
         <ul class="nav-links">
             
-            <li  class="active"><a class="navpages" href="#">Home</a></li>
+            <li  class="active"><a class="navpages" href="index.html">Home</a></li>
             <li><a class="navpages" href="#">Our Work</a></li>
             <li><a class="navpages" href="#">About Us</a></li>
-            <li class="ctn"><a class="navpages" href="#">Contact</a></li>
+            <li class="ctn"><a class="navpages" href="contact.html">Contact</a></li>
         
         </ul>
         <img src="./images/menu-btn.png" alt="" class="menu-btn">
     </nav>
+    </div>
 
 
 
@@ -118,7 +125,12 @@
 
 
 
+<h4 class="boroughnyc-title">Contact Us</h4>
+    <div class="line"></div>
 
+<br />
+<br />
+<br />
 
 <div class="container">
     <img src="shape.png" class="square" alt="" />
@@ -133,15 +145,15 @@
         <div class="info">
           <div class="information">
             <img src="./images/location.png" class="icon" alt="" />
-            <p>92 Cherry Drive Uniondale, NY 11553</p>
+            <p><a class="information" href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"> 215 West 101 Street, Apartment, NY 10025 </a></p>
           </div>
           <div class="information">
             <img src="./images/email.png" class="icon" alt="" />
-            <p>lorem@ipsum.com</p>
+            <p><a class="information" href="mailto:#"> alex@gmail.com </a></p>
           </div>
           <div class="information">
             <img src="./images/phone.png" class="icon" alt="" />
-            <p>123-456-789</p>
+            <p><a class="information" href="tel:#"> 646-123-4567 </a></p>
           </div>
         </div>
 
@@ -171,22 +183,22 @@
         <form action="https://formspree.io/f/xeqvlrqo" method="POST">
           <h3 class="title">Contact us</h3>
           <div class="input-container">
-            <input type="text" name="name" class="input" />
-            <label for="">Username</label>
-            <span>Username</span>
+            <input type="text" name="Name : " class="input" />
+            <label for="">Full Name</label>
+            <span>Full Name</span>
           </div>
           <div class="input-container">
-            <input type="email" name="email" class="input" />
+            <input type="email" name="Email : " class="input" />
             <label for="">Email</label>
             <span>Email</span>
           </div>
           <div class="input-container">
-            <input type="tel" name="phone" class="input" />
+            <input type="tel" name="Phone : " class="input" />
             <label for="">Phone</label>
             <span>Phone</span>
           </div>
           <div class="input-container textarea">
-            <textarea name="message" class="input"></textarea>
+            <textarea name="Message : " class="input"></textarea>
             <label for="">Message</label>
             <span>Message</span>
           </div>
@@ -209,6 +221,67 @@
 
 
 
+
+
+  <footer class="footer-distributed">
+  
+  <div class="footer-left">
+  
+  <h3>Alex<span>Construction</span></h3>
+  
+  <p class="footer-links">
+  <a href="index.html">Home</a>
+  ·
+  <a href="#">Our Work</a>
+  ·
+  <a href="#">About Us</a>
+  ·
+  <a href="contact.html">Contact Us</a>
+  
+  </p>
+  
+  <p class="footer-company-name">Alex LLC &copy; 2022</p>
+  </div>
+  
+  <div class="footer-center">
+  
+  <div>
+  <i class="fa fa-map-marker"></i>
+  <p><span>215 West 101 Street</span> New York, NY</p>
+  </div>
+  
+  <div>
+  <i class="fa fa-phone"></i>
+  <p><a href="tel:123-456-7890">123-456-7890</a></p>
+  </div>
+  
+  <div>
+  <i class="fa fa-envelope"></i>
+  <p><a href="mailto:support@company.com">alex@gmail.com</a></p>
+  </div>
+  
+  </div>
+  
+  <div class="footer-right">
+  
+  <p class="footer-company-about">
+  <span>About the company</span>
+  Web Dev Trick is a blog for web designers, graphic designers, web developers &amp; SEO Learner.
+  </p>
+  
+  <div class="footer-icons">
+  
+  <a href="#"><i class="fa fa-facebook"></i></a>
+  <a href="#"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-github"></i></a>
+  
+  </div>
+  
+  </div>
+  
+  </footer>
+ 
 
 
 
