our work update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             
             <li  class="active"><a class="navpages" href="index.html">Home</a></li>
             <li><a class="navpages" href="ourwork.html">Our Work</a></li>
-            <li><a class="navpages" href="#">About Us</a></li>
             <li class="ctn"><a class="navpages" href="contact.html">Contact</a></li>
         
         </ul>
@@ -138,8 +137,7 @@
       <div class="contact-info">
         <h3 class="title">Let's get in touch</h3>
         <p class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-          dolorum adipisci recusandae praesentium dicta!
+          Feel free to contact us regarding any questions you might have or if you are interested in hiring us for a job. We will respond to you as soon as possible.
         </p>
 
         <div class="info">
@@ -234,8 +232,7 @@
   ·
   <a href="ourwork.html">Our Work</a>
   ·
-  <a href="#">About Us</a>
-  ·
+  
   <a href="contact.html">Contact Us</a>
   
   </p>
