--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-    <link rel="icon" href="/images/favicon.png" >
+    <link rel="icon" href="/images/favicon1.png" >
 
 </head>
 <body>
