--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
-    <title>KLC Construction< - Home</title>
+    <title>KLC Construction - Home</title>
+    <link rel="shortcut icon" href="images/download-removebg-preview.png">    
     <link rel="stylesheet" href="assets/css/style.css">
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
@@ -12,8 +13,6 @@
     ></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-    <link rel="icon" href="/images/favicon.png" >
-
 </head>
 <body>
   <div class="oplayer"> </div>
