--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>KLC Construction - Home</title>
-    <link rel="shortcut icon" href="images/download-removebg-preview.png">    
+    <link rel="shortcut icon" href="images/Screen_Shot_2021-10-09_at_9.47.30_PM-removebg-preview.png">    
     <link rel="stylesheet" href="assets/css/style.css">
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
