--- a/ourwork.html
+++ b/ourwork.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width", initial-scale=1.0">
     <title>KLC Construction - Our Work</title>
     <link rel="stylesheet" href="assets/css/ourwork.css">
+    <link rel="shortcut icon" href="images/Screen_Shot_2021-10-09_at_9.47.30_PM-removebg-preview.png">    
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
-    <link rel="icon" href="/images/favicon.png" >
 
 
 </head>
