update to our work section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <h2>KLC Construction Service </h2>
 
-        <a href="#" class="ctn">More Info</a>
+        <a href="contact.html" class="ctn">Contact Us</a>
 
         </div>
     </header>
@@ -61,15 +61,13 @@
             <div class="col">
                 <img src="./images/previewbathroom.jpeg" alt="picture of a furnished bathroom">
                 <h4>Bathrooms</h4>
-                <p> We refurnish bathrooms fully and can customize them to your liking.</p>
-                <a href="#" class="ctn">See More</a>
+                <a href="ourwork.html" class="ctn">See More</a>
             </div>
 
             <div class="col">
                 <img src="./images/previewflooring.jpeg" alt="picture of a furnished bathroom">
                 <h4>Tiling</h4>
-                <p> We refurnish floors fully and can customize them to your liking.</p>
-                <a href="#" class="ctn">See More</a>
+                <a href="ourwork.html" class="ctn">See More</a>
             </div>
         </div>
     </section>
@@ -80,15 +78,13 @@
             <div class="col">
                 <img src="./images/previewkitchen.jpeg" alt="picture of a furnished bathroom">
                 <h4>Kitchens</h4>
-                <p> We refurnish kitchens fully and can customize them to your liking.</p>
-                <a href="#" class="ctn">See More</a>
+                <a href="ourwork.html" class="ctn">See More</a>
             </div>
 
             <div class="col">
                 <img src="./images/previewmolding.jpeg" alt="picture of a furnished bathroom">
                 <h4>Molding</h4>
-                <p> We refurnish floors fully and can customize them to your liking.</p>
-                <a href="#" class="ctn">See More</a>
+                <a href="ourwork.html" class="ctn">See More</a>
             </div>
         </div>
     </section>
