--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 <br />
 <br />
 
-<div class="container">
+<div class="container-contact">
     <img src="shape.png" class="square" alt="" />
     <div class="form">
       <div class="contact-info">
