--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
         <div class="info">
           <div class="information">
             <a href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"><img src="./images/location.png" class="icon" alt="" /></a>
-            <p><a class="information" href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"> 215 West 101 Street, Apartment, NY 10025 </a></p>
+            <p><a class="information" href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"> 269 Ocean Parkway, Apt 1B
+Brooklyn, NY, 11218 </a></p>
           </div>
           <div class="information">
-            <a href="mailto:getreadypros@gmail.com"><img src="./images/email.png" class="icon" alt=""/></a>
-            <p><a class="information" href="mailto:getreadypros@gmail.com"> getreadypros@gmail.com </a></p>
+            <a href="mailto:info@getreadypros.com"><img src="./images/email.png" class="icon" alt=""/></a>
+            <p><a class="information" href="mailto:info@getreadypros.com"> info@getreadypros.com </a></p>
           </div>
           <div class="information">
-            <a href="tel:347-784-0473"><img src="./images/phone.png" class="icon" alt=""/></a>
-            <p><a class="information" href="tel:347-784-0473"> 347-784-0473 </a></p>
+            <a href="tel:(646) 705-0600"><img src="./images/phone.png" class="icon" alt=""/></a>
+            <p><a class="information" href="tel:(646) 705-0600"> (646) 705-0600 </a></p>
           </div>
         </div>
 
@@ -209,13 +210,13 @@
   </div>
   
   <div>
-  <a href="tel:347-784-0473"> <i class="fa fa-phone"></i></a>
-  <p><a href="tel:347-784-0473">347-784-0473</a></p>
+  <a href="tel:(646) 705-0600"> <i class="fa fa-phone"></i></a>
+  <p><a href="tel:(646) 705-0600">(646) 705-0600</a></p>
   </div>
   
   <div>
-  <a href="mailto:getreadypros@gmail.com"><i class="fa fa-envelope"></i></a>
-  <p><a href="mailto:getreadypros@gmail.com">getreadypros@gmail.com</a></p>
+  <a href="mailto:info@getreadypros.com"><i class="fa fa-envelope"></i></a>
+  <p><a href="mailto:info@getreadypros.com">info@getreadypros.com</a></p>
   </div>
   
   </div>
