--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <nav class="navbar">
         
         <h1 class="logo">Get Ready Pros</h1>
-        <p class="tagline">Affordable Handyman Services Made Easy</p>
         <ul class="nav-links">
             
             <li  class="active"><a class="navpages" href="index.html">Home</a></li>
@@ -120,17 +119,16 @@
 
         <div class="info">
           <div class="information">
-            <a href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"><img src="./images/location.png" class="icon" alt="" /></a>
-            <p><a class="information" href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"> 269 Ocean Parkway, Apt 1B
-Brooklyn, NY, 11218 </a></p>
+            <a><img src="./images/location.png" class="icon" alt="" /></a>
+            <p><a class="information"> 968 East 223rd, Bronx, NY, 10466 </a></p>
           </div>
           <div class="information">
             <a href="mailto:info@getreadypros.com"><img src="./images/email.png" class="icon" alt=""/></a>
             <p><a class="information" href="mailto:info@getreadypros.com"> info@getreadypros.com </a></p>
           </div>
           <div class="information">
-            <a href="tel:(646) 705-0600"><img src="./images/phone.png" class="icon" alt=""/></a>
-            <p><a class="information" href="tel:(646) 705-0600"> (646) 705-0600 </a></p>
+            <a href="tel:(929) 352 5961"><img src="./images/phone.png" class="icon" alt=""/></a>
+            <p><a class="information" href="tel:(929) 352 5961"> (929) 352 5961 </a></p>
           </div>
         </div>
 
@@ -205,13 +203,13 @@ Brooklyn, NY, 11218 </a></p>
   <div class="footer-center">
   
     <div>
-      <a href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"><i class="fa fa-map-marker"></i></a>
-  <p><a href="https://www.google.com/maps/place/215+W+101st+St,+New+York,+NY+10025/@40.7977815,-73.9711954,17z/data=!3m1!4b1!4m5!3m4!1s0x89c2f625d70b4a73:0x5b219bcefa1ca609!8m2!3d40.7977815!4d-73.9690067"><span>215 West 101 Street</span> New York, NY</a></p>
+      <a><i class="fa fa-map-marker"></i></a>
+  <p><a><span>968 East 223rd</span> Bronx, NY</a></p>
   </div>
   
   <div>
-  <a href="tel:(646) 705-0600"> <i class="fa fa-phone"></i></a>
-  <p><a href="tel:(646) 705-0600">(646) 705-0600</a></p>
+  <a href="tel:(929) 352 5961"> <i class="fa fa-phone"></i></a>
+  <p><a href="tel:(929) 352 5961">(929) 352 5961</a></p>
   </div>
   
   <div>
