--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     
     <br/><br/>
-    <p class="boroughnyc-p"> We are a construction company based in Manhattan, New York Currently we provide our services across various locations in the 5 boroughs. Contact us regarding your location and we will let you know if we are able to provide our services to you. </p>
+    <p class="boroughnyc-p"> We are a construction company based in Manhattan, New York Currently we provide our services across various locations in the 5 boroughs. We also service East and West Hamptons along with properties located in 5 towns. Contact us regarding your location and we will let you know if we are able to provide our services to you. </p>
 
     <br/><br/><br/>
 
@@ -132,23 +132,6 @@
           </div>
         </div>
 
-        <div class="social-media">
-          <p>Connect with us :</p>
-          <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-instagram"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </div>
-        </div>
       </div>
 
       <div class="contact-form">
@@ -197,7 +180,7 @@
   <a href="contact.html">Contact Us</a>
   </p>
   
-  <p class="footer-company-name">Get Ready Pros Inc. &copy; 2022</p>
+  <p class="footer-company-name">Get Ready Pros Inc. &copy; 2005</p>
   </div>
   
   <div class="footer-center">
